added logo x 2 and boooking show part

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -69,3 +69,13 @@ a {
   // text-align: justify;
   // background-color: rgb(209, 231, 213);
 }
+
+.logo-on-page{
+  max-width: 200px;
+  margin: auto;
+}
+
+.photo-on-page{
+  max-width: 400px;
+  margin: auto;
+}
