--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -19,6 +19,17 @@
         <div class="tool-reviews mt-3">
           <h3 class="mt-3">Reviews</h3>
           <p> See what our users said about this <%= @tool.name %> </p>
+          <ul>
+           <% if @tool.reviews.empty? %>
+             <p> No reviews yet</p>
+              <% @tool.reviews.each do |review| %>
+                <% review.rating.times do %>
+                  <i class="fas fa-star star-yellow"></i>
+                <% end %>
+               <p class="mb-0"><%= review.comment %></p>
+              <% end %>
+           <% end %>
+          </ul>
         </div>
         <div class="col col-md-7 col-lg-5">
           <%= link_to "back to all tools".html_safe, tools_path, class: "" %>
