adds img extension to img_tag for heroku deployment

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "toolup-banner", class: "toolup-logo-banner" %>
+      <%= image_tag "toolup-banner.jpg", class: "toolup-logo-banner" %>
        <%= show_svg('logo2.svg') %>
     <% end %>
 
