removes the white bar above tools index page caused by margin

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -19,7 +19,7 @@ function getSort() {
 
 </script>
 <div class="tools-body">
-  <div class="container-lg py-3 mt-4">
+  <div class="container-lg py-3">
   <h2 class="h3">Tools available nearby</h2>
   <div class="input-group rounded">
     <input type="search" id="search_text" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" value=<%= params[:search]%> >
