--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -43,6 +43,9 @@ function getSort() {
           <% @tools.each do |tool| %>
               <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
                 <div class="card rounded-3 shadow mb-3 h-100 border-0">
+                <%# if  !@tool.photo.key.empty? %>
+                <%# cl_image_tag @tool.photo.key, height: 300, width: 400, crop: :fill %>
+                <%#end%>
                   <img src="<%=tool.image_url%>" class="card-img-top tool-img" alt="picture of a <%=tool.name %>">
                     <div class="card-body py-3 d-flex align-items-start flex-column">
                       <h2 class="card-title fs-3"><%= tool.name %></h2>
