--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -38,15 +38,19 @@ function getSort() {
         <option value="Rating_low">Rating (lowest first)</option>
     </select>
   </div>
+  <% cl_image_tag("pfwsqgx9n3409k2hhxbp",
+      width: 150, height: 150, crop: :thumb, gravity: :face) %>
       <div class="row mt-2 card-group">
           <%# <div class="col rounded p-3"> %>
           <% @tools.each do |tool| %>
               <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
                 <div class="card rounded-3 shadow mb-3 h-100 border-0">
-                <%# if  !@tool.photo.key.empty? %>
-                <%# cl_image_tag @tool.photo.key, height: 300, width: 400, crop: :fill %>
-                <%#end%>
-                  <img src="<%=tool.image_url%>" class="card-img-top tool-img" alt="picture of a <%=tool.name %>">
+                <% if  tool.photo.attached? %>
+                 <%= cl_image_tag @tool.photo.key, height: 300, width: 400, crop: :fill %>
+                <% else %>
+                <img src="<%=tool.image_url%>" class="card-img-top tool-img" alt="picture of a <%=tool.name %>">
+                <% end %>
+
                     <div class="card-body py-3 d-flex align-items-start flex-column">
                       <h2 class="card-title fs-3"><%= tool.name %></h2>
                       <p class="card-text">Price: £<%= tool.price %> / day</p>
