--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -24,12 +24,13 @@
           <h3 class="mt-3">Reviews</h3>
           <p> See what our users said about this <%= @tool.name %> </p>
           <ul>
-           <% if @booking.reviews.empty? %>
+           <% if @reviews.empty? %>
              <p> No reviews yet</p>
-              <% @booking.reviews.each do |review| %>
-                <% review.rating.times do %>
-                  <i class="fas fa-star star-yellow"></i>
-                <% end %>
+             <% else %>
+             <% @reviews.each do |review| %>
+              <% review.rating.times do %>
+                <i class="fas fa-star star-yellow"></i>
+             <% end %>
                <p class="mb-0"><%= review.comment %></p>
               <% end %>
            <% end %>
