--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,8 @@
-<div class="container">
-  <h2>Sign up</h2>
+<div class="container my-5">
+<div class="row justify-content-center">
+
+  <div class="col col-md-8">
+      <h2>Sign up</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),
     data: {turbo: false}) do |f| %>
@@ -32,9 +35,12 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+      <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
     </div>
   <% end %>
 
   <%= render "devise/shared/links" %>
+</div>
+
+  </div>
 </div>
