--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -13,7 +13,7 @@
     <div class="col col-md-4 mt-4">
       <h2 class="fs-3">Booking details </h2>
       <ul class="list-group my-3">
-        <li class="list-group-item"> <%= @booking.tool.name%> booked for <%= length = ((@booking.end_date - @booking.start_date).to_i + 1) %> days </li>
+        <li class="list-group-item"> <%= @booking.tool.name%> booked for <%= length = ((@booking.end_date - @booking.start_date).to_i + 1) %> <%= length == 1 ? "day" : "days" %> </li>
         <li class="list-group-item"> Your booking start date: <%=@booking.start_date.strftime("%d/%m/%y") %> </li>
         <li class="list-group-item"> Your booking end date: <%=@booking.end_date.strftime("%d/%m/%y") %> </li>
         <li class="list-group-item"> Total price: £<%=(@booking.tool.price * length) %> </li>
