tools sort by nearest distance

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -31,7 +31,7 @@ function getSort() {
     <!-- AUTO COMPLETE DROPDOWN -->
     <select id="sort" class="selectpicker form-control form-select form-select-sm border mt-1 mb-1 px-1 py-1 rounded" onchange='getSort()'>
         <option selected>Sort by</option>
-        <option value="Distance">Distance (nearest first)</option>
+        <option value="order=distance">Distance (nearest first)</option>
         <option value="order=asc">Price (lowest first)</option>
         <option value="order=desc">Price (highest first)</option>
         <option value="Rating_high">Rating (highest first)</option>
@@ -53,13 +53,20 @@ function getSort() {
                         &#9733;
                         <% end %>
                       </h3>
-                      <p class="card-text"><small class="text-muted mb-auto">Location: <%= tool.address %> (<%=rand(0.5...5).round(2)%> miles from you)</small></p>
+                      <p class="card-text"><small class="text-muted mb-auto">Location: <%= tool.address %>
+                      <!--
+                      (<%=rand(0.5...5).round(2)%> miles from you)-->
+                      <% if current_user.present? %>
+                      ( <%= Geocoder::Calculations.distance_between(Geocoder.coordinates(current_user.postcode), [tool.latitude, tool.longitude]).round(2) %> miles from you )
+                      <% end %>
+                      </small></p>
                       <%= link_to "View this tool", tool_path(tool), class: "btn btn-primary w-100 align-self-end" %>
                     </div>
                   </div>
               </div>
               <% end %>
           </div>
+
       </div>
   </div>
 </div>
