add stretch link for tool card

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -48,7 +48,6 @@ function getSort() {
                 <% else %>
                 <img src="<%=tool.image_url%>" class="card-img-top tool-img" alt="picture of a <%=tool.name %>">
                 <% end %>
-
                     <div class="card-body py-3 d-flex align-items-start flex-column">
                       <h2 class="card-title fs-3"><%= tool.name %></h2>
                       <p class="card-text">Price: £<%= tool.price %> / day</p>
@@ -59,7 +58,8 @@ function getSort() {
                         <% end %>
                       </h3>
                       <p class="card-text"><small class="text-muted mb-auto">Location: <%= tool.address %> (<%=rand(0.5...5).round(2)%> miles from you)</small></p>
-                      <%= link_to "View this tool", tool_path(tool), class: "btn btn-primary w-100 align-self-end" %>
+                      <%= link_to "View this tool", tool_path(tool), class: "btn btn-primary w-100 align-self-end stretched-link" %>
+                      <%# link_to tool_path(tool), class: "stretched-link" %>
                     </div>
                   </div>
               </div>
