--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -23,16 +23,18 @@
         <div class="tool-reviews mt-3">
           <h3 class="mt-3">Reviews</h3>
           <p> See what our users said about this <%= @tool.name %> </p>
-          <ul>
            <% if @reviews.empty? %>
-             <p> No reviews yet</p>
+             <p> No reviews yet.</p>
              <% else %>
+          <ul>
              <% @reviews.each do |review| %>
+             <div class="d-flex align-items-center">
               <% review.rating.times do %>
-                <i class="fas fa-star star-yellow"></i>
+                <i class="fas fa-star star-yellow me-2"></i>
              <% end %>
 
                <p class="mb-0"><%= review.comment %></p>
+               </div>
               <% end %>
            <% end %>
           </ul>
