--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,7 +10,7 @@
   <% end %>
     </div>
   </div>
-    <ol class="list-group list-group-numbered">
+    <ol class="list-group list-group-numbered my-bookings">
     <% @bookings.each do |booking| %>
     <li class="list-group-item d-flex align-items-center justify-content-between align-items-start">
       <div class="ms-2 me-auto">
