--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-4 d-flex justify-content-center">
-    <div class="col-sm-10 col-md-6 mb-5">
+    <div class="col-sm-10 col-md-6 mb-5 p-3 rounded card">
       <h1>Lend a tool</h1>
       <p>Add the details below of the tool that you'd like to lend to others</p>
       <%= simple_form_for @tool do |f| %>
