--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container-md">
   <div class="row my-4 justify-content-center">
-    <div class="col col-md-8">
+    <div class="col col-md-8 card">
     <div class="booking__confirmation my-3">
       <h1 class="text-center fs-1">Thank you for booking with </h1>
         <div class="logo-on-page">
@@ -11,12 +11,14 @@
       </div>
       <img src="<%=@booking.tool.image_url%>" class="card-img-top confirmation__img my-3" alt="picture of a <%=@booking.tool.name %>">
     </div>
-    <div class="col col-md-4 mt-4">
+    <div class="col col-md-4 ">
+    <div class="card p-3">
       <h2 class="fs-3">Booking details </h2>
       <% booking = @booking.end_date %>
       <% if booking.past? %>
         <p class="lead danger">This booking is in the past<p>
       <% end %>
+      </div>
       <ul class="list-group my-3">
         <li class="list-group-item"> <%= @booking.tool.name%> booked for <%= length = ((@booking.end_date - @booking.start_date).to_i + 1) %> <%= length == 1 ? "day" : "days" %> </li>
         <li class="list-group-item"> Your booking start date: <%=@booking.start_date.strftime("%d/%m/%y") %> </li>
@@ -24,7 +26,7 @@
         <li class="list-group-item"> Total price: £<%=(@booking.tool.price * length) %> </li>
         <li class="list-group-item"> You can pick up your tool on <%=@booking.end_date.strftime("%d/%m/%y") %> at <%=@booking.tool.address %> </li>
       </ul>
-        <div class="bg-white mt-4">
+        <div class="bg-white mt-4 p-3 card">
           <h2 class="fs-4">Add your review</h2>
             <p><strong>Did you love it? Did you hate it? Leave a review!</strong></p>
           <%= simple_form_for [@booking, @review] do |f| %>
