--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -21,25 +21,26 @@
           </div>
         </div>
         <div class="tool-reviews mt-3">
-          <h3 class="mt-3">Reviews</h3>
+          <h3 class="mt-5">Reviews</h3>
           <p> See what our users said about this <%= @tool.name %> </p>
-           <% if @reviews.empty? %>
-             <p> No reviews yet.</p>
-             <% else %>
-          <ul>
-             <% @reviews.each do |review| %>
-             <div class="d-flex align-items-center">
-              <% review.rating.times do %>
-                <i class="fas fa-star star-yellow me-2"></i>
-             <% end %>
-
-               <p class="mb-0"><%= review.comment %></p>
-               </div>
+            <% if @reviews.empty? %>
+            <p> No reviews yet.</p>
+            <% else %>
+          <ul class="list-group">
+              <% @reviews.each do |review| %>
+              <li class="list-group-item">
+                <div class="d-flex align-items-center">
+                  <% review.rating.times do %>
+                    <i class="fas fa-star star-yellow me-2"></i>
+                    <% end %>
+                    <p class="mb-0"><%= review.comment %></p>
+                  </div>
               <% end %>
-           <% end %>
+              </li>
+            <% end %>
           </ul>
         </div>
-        <div class="col col-md-7 col-lg-5">
+        <div class="col col-md-7 col-lg-5 mt-2">
           <i class="fa-regular fa-hand-point-left me-1"></i><%= link_to "back to all tools".html_safe, tools_path, class: "" %>
         </div>
       </div>
